// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CloseButton should honor disabled 1`] = `
<button
  aria-label="Close"
  class="inline-flex items-center justify-center rounded-full border-0 bg-transparent shrink-0 focus:outline-none focus:ring transition-[color,background-color,transform] ease-out active:scale-[0.97] disabled:active:scale-100 motion-reduce:transform-none motion-reduce:transition-none motion-reduce:active:scale-100 cursor-not-allowed shrink-0 focus:outline-none focus:ring cursor-not-allowed"
  disabled=""
  style="width: 34px; height: 34px; min-width: 34px; min-height: 34px; padding: 6px; color: rgba(239, 68, 68, 0.28); opacity: 0.75; transition-duration: 200ms;"
  type="button"
>
  <svg
    aria-hidden="true"
    fill="currentColor"
    focusable="false"
    style="width: 16px; height: 16px;"
    viewBox="0 0 24 24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M19 6.41 17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
    />
  </svg>
</button>
`;

exports[`CloseButton should render correct components 1`] = `
<button
  aria-label="Close"
  class="inline-flex items-center justify-center rounded-full border-0 bg-transparent shrink-0 focus:outline-none focus:ring transition-[color,background-color,transform] ease-out active:scale-[0.97] disabled:active:scale-100 motion-reduce:transform-none motion-reduce:transition-none motion-reduce:active:scale-100 shrink-0 focus:outline-none focus:ring"
  style="width: 34px; height: 34px; min-width: 34px; min-height: 34px; padding: 6px; color: rgba(239, 68, 68, 0.36); opacity: 1; transition-duration: 200ms;"
  type="button"
>
  <svg
    aria-hidden="true"
    fill="currentColor"
    focusable="false"
    style="width: 16px; height: 16px;"
    viewBox="0 0 24 24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M19 6.41 17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
    />
  </svg>
</button>
`;
